# template_metaprogramming

./: CMakeLists.txt
basics/: CMakeLists.txt
basics/include/basics/: max1.h  maxauto.h  maxcommon.h  maxdecltype.h  maxdecltypedecay.h  maxdefault1.h  maxdefault3.h
basics/src/: main.cpp  max1.cpp  max2.cpp  maxcommon.cpp
basics/test/: .max1.cpp.swp  CMakeLists.txt  max1.cpp
cmake/: GoogleTestHelper.cmake
